Re-add 4688. This ticket was overwritten/deleted when we made the switch to one large file 0.0.6

--- a/0.0.6
+++ b/0.0.6
@@ -330,6 +330,104 @@
                }
             }
          ]
+      },
+      {
+         "sObjectName":"FinServ__FinancialAccount__c",
+         "instructionTypeName":"command__Annuity",
+         "taskList":[
+            {
+               "jiraTicket":"AC-4688a",
+               "actionType":"RecordTypePicklist",
+               "actionTypeName":"FinServ__TaxStatus__c",
+               "optionsMap":{
+                  "picklistValues":"401(a),401(k),403(a),403(b),457 Plan,529 Plan,Beneficiary IRA,Bene-IRA,Educational IRA,Health Savings Account,HR10,Inherited IRA,Medical Savings Account,Non Deductible IRA,Nonqualified,NQ Stretch,Other,Pension Plan,Profit Sharing Plan,Q-IRA,Q-Other,Q-Roth IRA,Q-Sep,Qualified,Rollover IRA,Roth,Roth IRA,SEP,Simple IRA,Traditional IRA,UGMA,UTMA"
+               }
+            }
+         ]
+      },
+      {
+         "sObjectName":"FinServ__FinancialAccount__c",
+         "instructionTypeName":"command__AUM",
+         "taskList":[
+            {
+               "jiraTicket":"AC-4688b",
+               "actionType":"RecordTypePicklist",
+               "actionTypeName":"FinServ__TaxStatus__c",
+               "optionsMap":{
+                  "picklistValues":"401(a),401(k),403(a),403(b),457 Plan,529 Plan,Beneficiary IRA,Bene-IRA,Educational IRA,Health Savings Account,HR10,Inherited IRA,Medical Savings Account,Non Deductible IRA,Nonqualified,NQ Stretch,Other,Pension Plan,Profit Sharing Plan,Q-IRA,Q-Other,Q-Roth IRA,Q-Sep,Qualified,Rollover IRA,Roth,Roth IRA,SEP,Simple IRA,Traditional IRA,UGMA,UTMA"
+               }
+            }
+         ]
+      },
+      {
+         "sObjectName":"FinServ__FinancialAccount__c",
+         "instructionTypeName":"command__Life",
+         "taskList":[
+            {
+               "jiraTicket":"AC-4688c",
+               "actionType":"RecordTypePicklist",
+               "actionTypeName":"FinServ__TaxStatus__c",
+               "optionsMap":{
+                  "picklistValues":"401(a),401(k),403(a),403(b),457 Plan,529 Plan,Beneficiary IRA,Bene-IRA,Educational IRA,Health Savings Account,HR10,Inherited IRA,Medical Savings Account,Non Deductible IRA,Nonqualified,NQ Stretch,Other,Pension Plan,Profit Sharing Plan,Q-IRA,Q-Other,Q-Roth IRA,Q-Sep,Qualified,Rollover IRA,Roth,Roth IRA,SEP,Simple IRA,Traditional IRA,UGMA,UTMA"
+               }
+            }
+         ]
+      },
+      {
+         "sObjectName":"FinServ__FinancialAccount__c",
+         "instructionTypeName":"command__Other",
+         "taskList":[
+            {
+               "jiraTicket":"AC-4688d",
+               "actionType":"RecordTypePicklist",
+               "actionTypeName":"FinServ__TaxStatus__c",
+               "optionsMap":{
+                  "picklistValues":"401(a),401(k),403(a),403(b),457 Plan,529 Plan,Beneficiary IRA,Bene-IRA,Educational IRA,Health Savings Account,HR10,Inherited IRA,Medical Savings Account,Non Deductible IRA,Nonqualified,NQ Stretch,Other,Pension Plan,Profit Sharing Plan,Q-IRA,Q-Other,Q-Roth IRA,Q-Sep,Qualified,Rollover IRA,Roth,Roth IRA,SEP,Simple IRA,Traditional IRA,UGMA,UTMA"
+               }
+            }
+         ]
+      },
+      {
+         "sObjectName":"FinServ__FinancialAccount__c",
+         "instructionTypeName":"command__Mutual_Funds",
+         "taskList":[
+            {
+               "jiraTicket":"AC-4688e",
+               "actionType":"RecordTypePicklist",
+               "actionTypeName":"FinServ__TaxStatus__c",
+               "optionsMap":{
+                  "picklistValues":"401(a),401(k),403(a),403(b),457 Plan,529 Plan,Beneficiary IRA,Bene-IRA,Educational IRA,Health Savings Account,HR10,Inherited IRA,Medical Savings Account,Non Deductible IRA,Nonqualified,NQ Stretch,Other,Pension Plan,Profit Sharing Plan,Q-IRA,Q-Other,Q-Roth IRA,Q-Sep,Qualified,Rollover IRA,Roth,Roth IRA,SEP,Simple IRA,Traditional IRA,UGMA,UTMA"
+               }
+            }
+         ]
+      },
+      {
+         "sObjectName":"FinServ__FinancialAccount__c",
+         "instructionTypeName":"command__REIT_s",
+         "taskList":[
+            {
+               "jiraTicket":"AC-4688f",
+               "actionType":"RecordTypePicklist",
+               "actionTypeName":"FinServ__TaxStatus__c",
+               "optionsMap":{
+                  "picklistValues":"401(a),401(k),403(a),403(b),457 Plan,529 Plan,Beneficiary IRA,Bene-IRA,Educational IRA,Health Savings Account,HR10,Inherited IRA,Medical Savings Account,Non Deductible IRA,Nonqualified,NQ Stretch,Other,Pension Plan,Profit Sharing Plan,Q-IRA,Q-Other,Q-Roth IRA,Q-Sep,Qualified,Rollover IRA,Roth,Roth IRA,SEP,Simple IRA,Traditional IRA,UGMA,UTMA"
+               }
+            }
+         ]
+      },
+      {
+         "sObjectName":"FinServ__FinancialAccount__c",
+         "taskList":[
+            {
+               "jiraTicket":"AC-4688g",
+               "actionType":"PicklistValueCustom",
+               "actionTypeName":"FinServ__TaxStatus__c",
+               "optionsMap":{
+                  "sortList":true,
+                  "picklistValues":"401(a),401(k),403(a),403(b),457 Plan,529 Plan,Beneficiary IRA,Bene-IRA,Educational IRA,Health Savings Account,HR10,Inherited IRA,Medical Savings Account,Non Deductible IRA,Nonqualified,NQ Stretch,Other,Pension Plan,Profit Sharing Plan,Q-IRA,Q-Other,Q-Roth IRA,Q-Sep,Qualified,Rollover IRA,Roth,Roth IRA,SEP,Simple IRA,Traditional IRA,UGMA,UTMA"
+               }
+            }
+         ]
       }
    ]
 }
