Instruction corrections. Solves null pointer reference and soap error.

--- a/0.0.6
+++ b/0.0.6
@@ -61,7 +61,7 @@
                "actionType":"FieldLevelSecurity",
                "actionTypeName":"FinServ__AssociationType__c",
                "optionsMap":{
-                  "profileName":"ReadOnly",
+                  "profileName":"AC Read Only",
                   "readable":"true",
                   "editable":"true"
                }
@@ -202,7 +202,7 @@
       },
       {
          "sObjectName":"Event",
-         "instructionTypeName":"command__Event Layout",
+         "instructionTypeName":"Event Layout",
          "description":"Add  fields on  Event Layout",
          "taskList":[
             {
