adding command to front of Event sObject for test

--- a/0.0.6
+++ b/0.0.6
@@ -201,7 +201,7 @@
          ]
       },
       {
-         "sObjectName":"Event",
+         "sObjectName":"command__Event",
          "instructionTypeName":"Event Layout",
          "description":"Add  fields on  Event Layout",
          "taskList":[
