changed instruction type name

--- a/0.0.6
+++ b/0.0.6
@@ -201,8 +201,8 @@
          ]
       },
       {
-         "sObjectName":"command__Event",
-         "instructionTypeName":"Event Layout",
+         "sObjectName":"Event",
+         "instructionTypeName":"command__Event Layout",
          "description":"Add  fields on  Event Layout",
          "taskList":[
             {
