remove command namespace from event layout.

--- a/0.0.6
+++ b/0.0.6
@@ -202,7 +202,7 @@
       },
       {
          "sObjectName":"Event",
-         "instructionTypeName":"command__Event Layout",
+         "instructionTypeName":"Event Layout",
          "description":"Add  fields on  Event Layout",
          "taskList":[
             {
