Updated the recordType api name

--- a/0.0.7
+++ b/0.0.7
@@ -15,7 +15,7 @@
       },
       {
          "sObjectName": "PersonAccount",
-         "instructionTypeName": "command__Client",
+         "instructionTypeName": "command__PersonAccount",
          "taskList": [
             {
                "jiraTicket": "AC-23914b",
