--- a/1.3.1
+++ b/1.3.1
@@ -4,7 +4,7 @@
          "sObjectName":"command__mdMetadataVersions__c",
          "taskList":[
             {
-               "jiraTicket":"1.3 to 1.4 Upgrade Instructions",
+               "jiraTicket":"AC-40855",
                "actionType":"PicklistValueCustom",
                "actionTypeName":"command__status__c",
                "optionsMap":{
