Change case on Status api name

--- a/1.3.1
+++ b/1.3.1
@@ -6,7 +6,7 @@
             {
                "jiraTicket":"AC-40855",
                "actionType":"PicklistValueCustom",
-               "actionTypeName":"command__status__c",
+               "actionTypeName":"command__Status__c",
                "optionsMap":{
                   "sortList":true,
                   "picklistValues":"Completed,Pending,Failed"
