Record type client to  PersonAccount

--- a/1.5.1
+++ b/1.5.1
@@ -53,7 +53,7 @@
         },
         {
             "sObjectName": "PersonAccount",
-            "instructionTypeName": "command__Client",
+            "instructionTypeName": "command__PersonAccount",
             "taskList": [
                 {
                     "jiraTicket": "AC-23914e",
