--- a/1.5.1
+++ b/1.5.1
@@ -23,7 +23,7 @@
                         "filePath": "objectTranslations",
                         "packageMember": "CustomObjectTranslation",
                         "packageSubMembers": "Activity-en_US",
-                        "isRetriveAndDeploy": "true"
+                        "isRetrieveAndDeploy": "true"
                     }
                 }
             ]
