--- a/1.5.1
+++ b/1.5.1
@@ -7,7 +7,7 @@
                     "jiraTicket": "AC-24873a",
                     "actionType": "RenameStandardFieldLabel",
                     "actionTypeName": "type_activity",
-                    "description": "Update the standar field lable",
+                    "description": "Update the standard field label",
                     "actionTypeLabel": "Meeting Type"
                 }
             ]
@@ -18,7 +18,7 @@
                     "jiraTicket": "AC-24873b",
                     "actionType": "DeclarativeMetadata",
                     "actionTypeName": "dummy",
-                    "description": "Update the standar field lable on the event object",
+                    "description": "Update the standard field label on the event object",
                     "optionsMap": {
                         "filePath": "objectTranslations",
                         "packageMember": "CustomObjectTranslation",
