Instructions with correct ticket number,Description and API names

--- a/1.5.1
+++ b/1.5.1
@@ -5,8 +5,8 @@
             "description": "Path instrution to create new picklist field ",
             "taskList": [
                 {
-                    "jiraTicket": "ac-23914a",
-                    "description": "Add new picklist field and values to it",
+                    "jiraTicket": "ac-24629a",
+                    "description": "Add new Meeting Outcome picklist field",
                     "actionType": "PicklistValueCustom",
                     "actionTypeName": "Meeting_Outcome__c",
                     "optionsMap": {
@@ -24,8 +24,8 @@
             "description": "Path instruction to add fields on  Event Layout",
             "taskList": [
                 {
-                    "jiraTicket": "ac-23914b",
-                    "description": "Place Meeting Outcome field below Attendees Calendar Details section",
+                    "jiraTicket": "ac-24629b",
+                    "description": "Place Meeting Outcome field below Attendees in Calendar Details section",
                     "actionType": "Field",
                     "actionTypeName": "command__Meeting_Outcome__c",
                     "location": {
@@ -44,9 +44,10 @@
             "instructionTypeName": "FieldLevelSecurity",
             "taskList": [
                 {
-                    "jiraTicket": "AC-1872a",
+                    "jiraTicket": "AC-24629c",
+                    "description": "Add field level Level security",
                     "actionType": "FieldLevelSecurity",
-                    "actionTypeName": "command__Meeting_Outcomer__c",
+                    "actionTypeName": "command__Meeting_Outcome__c",
                     "optionsMap": {
                         "profileName": "AC Basic User",
                         "readable": "true",
@@ -61,9 +62,10 @@
             "instructionTypeName": "FieldLevelSecurity",
             "taskList": [
                 {
-                    "jiraTicket": "AC-1872a",
+                    "jiraTicket": "AC-24629d",
+                    "description": "Add field level Level security",
                     "actionType": "FieldLevelSecurity",
-                    "actionTypeName": "command__Meeting_Outcomer__c",
+                    "actionTypeName": "command__Meeting_Outcome__c",
                     "optionsMap": {
                         "profileName": "System Administrator",
                         "readable": "true",
@@ -78,9 +80,10 @@
             "instructionTypeName": "FieldLevelSecurity",
             "taskList": [
                 {
-                    "jiraTicket": "AC-1872a",
+                    "jiraTicket": "AC-24629e",
+                    "description": "Add field level Level security",
                     "actionType": "FieldLevelSecurity",
-                    "actionTypeName": "command__Meeting_Outcomer__c",
+                    "actionTypeName": "command__Meeting_Outcome__c",
                     "optionsMap": {
                         "profileName": "AC Read Only",
                         "readable": "true",
