--- a/1.5.1
+++ b/1.5.1
@@ -67,7 +67,7 @@
             "taskList": [
                 {
                     "jiraTicket": "ac-24873e",
-                    "description": "Add Meeting Type field under Subject To in the Calendar Details section",
+                    "description": "Add Meeting Type field under Subject in the Calendar Details section",
                     "actionType": "Field",
                     "actionTypeName": "Type",
                     "location": {
