Combined the instructions

--- a/1.5.1
+++ b/1.5.1
@@ -30,7 +30,7 @@
         },
         {
             "sObjectName": "Event",
-            "description": "Add new picklist values to Type",
+            "description": "Add and deactivate picklist values to Type",
             "taskList": [
                 {
                     "jiraTicket": "ac-24873c",
@@ -41,13 +41,7 @@
                         "picklistValues": "Email,Meeting,Other,Call",
                         "picklistOperation": "deactivate"
                     }
-                }
-            ]
-        },
-        {
-            "sObjectName": "Event",
-            "description": "Add new picklist values to Type",
-            "taskList": [
+                },
                 {
                     "jiraTicket": "ac-24873d",
                     "description": "Path to add 1st Meeting,2nd Meeting,3rd Meeting,Delivery Meeting,Annual Review values to Type",
