Update the operation

--- a/1.5.1
+++ b/1.5.1
@@ -13,7 +13,7 @@
                         "restricted": "true",
                         "label": "Meeting Outcome",
                         "picklistValues": "Confirmed,Canceled,Rescheduled,Completed,No-Show",
-                        "picklistOperation": "newField"
+                        "operation": "newField"
                     }
                 }
             ]
