Remove namespace on standard layouts

--- a/1.5.2
+++ b/1.5.2
@@ -2,7 +2,7 @@
     "instructionList": [
         {
             "sObjectName": "Global",
-            "instructionTypeName": "command__Global Layout",
+            "instructionTypeName": "Global Layout",
             "description": "Remove Platform actions from Global Layout",
             "taskList": [
                 {
@@ -78,7 +78,7 @@
         },
         {
             "sObjectName": "Campaign",
-            "instructionTypeName": "command__Campaign Layout",
+            "instructionTypeName": "Campaign Layout",
             "description": "Remove Platform actions from Layout",
             "taskList": [
                 {
@@ -249,7 +249,7 @@
         },
         {
             "sObjectName": "Opportunity",
-            "instructionTypeName": "command__Opportunity Layout",
+            "instructionTypeName": "Opportunity Layout",
             "description": "Remove Platform actions from Layout",
             "taskList": [
                 {
@@ -325,7 +325,7 @@
         },
         {
             "sObjectName": "Event",
-            "instructionTypeName": "command__Event Layout",
+            "instructionTypeName": "Event Layout",
             "description": "Remove Platform actions from Layout",
             "taskList": [
                 {
