--- a/1.5.1
+++ b/1.5.1
@@ -398,6 +398,405 @@
           ]
         }
       ]
+    },
+    {
+      "instructionTypeName": "FlexiPageComponent",
+      "taskList": [
+        {
+          "jiraTicket": "AC-20070d1",
+          "actionType": "FlexiPageComponent",
+          "actionTypeName": "FlexiPageComponent",
+          "description": "Add updated notes custom component to Account,Campaign,Case,Contact flexipages in AC Advisor App",
+          "optionsMap": {
+            "operation": "replace component",
+            "componentName": "command:customNotes",
+            "componentIdentifier": "customNotes_1",
+            "componentProperties": "pageSize,5",
+            "referenceComponentName": "force:relatedListSingleContainer",
+            "referenceComponentIdentifier": "relatedListApiName",
+            "referenceComponentIdentifierValue": "AttachedContentDocuments",
+            "sObjectsForRecordTypes": "Account",
+            "profiles": "AC Basic User,AC Read Only,Admin",
+            "applicationName": "command__AC_Advisor"
+          },
+          "location": {
+            "position": "replace"
+          },
+          "subTaskList": [
+            {
+              "jiraTicket": "AC-20070d2",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Campaign",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Advisor"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070d3",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Case",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Advisor"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070d4",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Contact",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Advisor"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070d5",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "command__event",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Advisor"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070d6",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Finserv__FinancialAccount__c",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Advisor"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070d7",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Lead",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Advisor"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070d8",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Task",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Advisor"
+              }
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "instructionTypeName": "FlexiPageComponent",
+      "taskList": [
+        {
+          "jiraTicket": "AC-20070e1",
+          "actionType": "FlexiPageComponent",
+          "actionTypeName": "FlexiPageComponent",
+          "description": "Add updated notes custom component to Account,Campaign,Case,Contact flexipages in AC Advisor App",
+          "optionsMap": {
+            "operation": "replace component",
+            "componentName": "command:customNotes",
+            "componentIdentifier": "customNotes_1",
+            "componentProperties": "pageSize,5",
+            "referenceComponentName": "force:relatedListSingleContainer",
+            "referenceComponentIdentifier": "relatedListApiName",
+            "referenceComponentIdentifierValue": "AttachedContentDocuments",
+            "sObjectsForRecordTypes": "Account",
+            "profiles": "AC Basic User,AC Read Only,Admin",
+            "applicationName": "command__AC_Marketing"
+          },
+          "location": {
+            "position": "replace"
+          },
+          "subTaskList": [
+            {
+              "jiraTicket": "AC-20070e2",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Campaign",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Marketing"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070e3",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Case",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Marketing"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070e4",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Contact",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Marketing"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070e5",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "command__event",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Marketing"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070e6",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Finserv__FinancialAccount__c",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Marketing"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070e7",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Lead",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Marketing"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070e8",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Task",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Marketing"
+              }
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "instructionTypeName": "FlexiPageComponent",
+      "taskList": [
+        {
+          "jiraTicket": "AC-20070f1",
+          "actionType": "FlexiPageComponent",
+          "actionTypeName": "FlexiPageComponent",
+          "description": "Add updated notes custom component to Account,Campaign,Case,Contact flexipages in AC Advisor App",
+          "optionsMap": {
+            "operation": "replace component",
+            "componentName": "command:customNotes",
+            "componentIdentifier": "customNotes_1",
+            "componentProperties": "pageSize,5",
+            "referenceComponentName": "force:relatedListSingleContainer",
+            "referenceComponentIdentifier": "relatedListApiName",
+            "referenceComponentIdentifierValue": "AttachedContentDocuments",
+            "sObjectsForRecordTypes": "Account",
+            "profiles": "AC Basic User,AC Read Only,Admin",
+            "applicationName": "command__AC_Ops"
+          },
+          "location": {
+            "position": "replace"
+          },
+          "subTaskList": [
+            {
+              "jiraTicket": "AC-20070f2",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Campaign",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Ops"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070f3",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Case",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Ops"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070f4",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Contact",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Ops"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070f5",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "command__event",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Ops"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070f6",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Finserv__FinancialAccount__c",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Ops"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070f7",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Lead",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Ops"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070f8",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Task",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Ops"
+              }
+            }
+          ]
+        }
+      ]
     }
   ]
 }
