--- a/1.5.1
+++ b/1.5.1
@@ -128,6 +128,21 @@
                 "profiles": "AC Basic User,AC Read Only,Admin",
                 "applicationName": "command__AC_Advisor"
               }
+            },
+            {
+              "jiraTicket": "AC-20070a9",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Opportunity",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Advisor"
+              }
             }
           ]
         }
@@ -258,6 +273,21 @@
                 "referenceComponentIdentifier": "relatedListApiName",
                 "referenceComponentIdentifierValue": "AttachedContentNotes",
                 "sObjectsForRecordTypes": "Task",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Marketing"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070b9",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Opportunity",
                 "profiles": "AC Basic User,AC Read Only,Admin",
                 "applicationName": "command__AC_Marketing"
               }
@@ -394,6 +424,21 @@
                 "profiles": "AC Basic User,AC Read Only,Admin",
                 "applicationName": "command__AC_Ops"
               }
+            },
+            {
+              "jiraTicket": "AC-20070c9",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Opportunity",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Ops"
+              }
             }
           ]
         }
@@ -524,6 +569,21 @@
                 "referenceComponentIdentifier": "relatedListApiName",
                 "referenceComponentIdentifierValue": "AttachedContentDocuments",
                 "sObjectsForRecordTypes": "Task",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Advisor"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070d9",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Opportunity",
                 "profiles": "AC Basic User,AC Read Only,Admin",
                 "applicationName": "command__AC_Advisor"
               }
@@ -660,6 +720,21 @@
                 "profiles": "AC Basic User,AC Read Only,Admin",
                 "applicationName": "command__AC_Marketing"
               }
+            },
+            {
+              "jiraTicket": "AC-20070e9",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Opportunity",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Marketing"
+              }
             }
           ]
         }
@@ -790,6 +865,21 @@
                 "referenceComponentIdentifier": "relatedListApiName",
                 "referenceComponentIdentifierValue": "AttachedContentDocuments",
                 "sObjectsForRecordTypes": "Task",
+                "profiles": "AC Basic User,AC Read Only,Admin",
+                "applicationName": "command__AC_Ops"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070f9",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentDocuments",
+                "sObjectsForRecordTypes": "Opportunity",
                 "profiles": "AC Basic User,AC Read Only,Admin",
                 "applicationName": "command__AC_Ops"
               }
