Add old 'new note' removal instructions

--- a/1.5.2
+++ b/1.5.2
@@ -341,6 +341,66 @@
                     }
                 }
             ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account (Annuity) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "ac-46595t",
+                    "description": "Remove standard New note from quick actions",
+                    "actionType": "QuickAction",
+                    "actionTypeName": "FeedItem.ContentNote",
+                    "optionsMap": {
+                        "operation": "remove"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account(AUM) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "ac-46595u",
+                    "description": "Remove standard New note from quick actions",
+                    "actionType": "QuickAction",
+                    "actionTypeName": "FeedItem.ContentNote",
+                    "optionsMap": {
+                        "operation": "remove"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account(Life) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "ac-46595v",
+                    "description": "Remove standard New note from quick actions",
+                    "actionType": "QuickAction",
+                    "actionTypeName": "FeedItem.ContentNote",
+                    "optionsMap": {
+                        "operation": "remove"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account (REIT/Mutual Fund/Other) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "ac-46595w",
+                    "description": "Remove standard New note from quick actions",
+                    "actionType": "QuickAction",
+                    "actionTypeName": "FeedItem.ContentNote",
+                    "optionsMap": {
+                        "operation": "remove"
+                    }
+                }
+            ]
         }
     ]
 }
