Added global layout instruction to remove standard new note button

--- a/1.5.2
+++ b/1.5.2
@@ -16,6 +16,14 @@
                         "platformActionListContext": "Global",
                         "operation": "remove"
                     }
+                },
+                {
+                    "jiraTicket": "ac-46595x",
+                    "actionType": "QuickAction",
+                    "actionTypeName": "FeedItem.ContentNote",
+                    "optionsMap": {
+                        "operation": "remove"
+                    }
                 }
             ]
         },
